# typed-headers

./: .gitignore  Cargo.toml  README.md
.circleci/: config.yml
src/: lib.rs  parsing.rs  util.rs
src/impls/: accept.rs  accept_charset.rs  accept_encoding.rs  accept_language.rs  accept_ranges.rs  access_control_allow_credentials.rs  access_control_allow_headers.rs  access_control_allow_methods.rs  access_control_allow_origin.rs  access_control_expose_headers.rs  access_control_max_age.rs  access_control_request_headers.rs  access_control_request_method.rs  allow.rs  auth_scheme.rs  authorization.rs  cache_control.rs  charset.rs  content_coding.rs  content_disposition.rs  content_encoding.rs  content_language.rs  content_length.rs  content_location.rs  content_range.rs  content_type.rs  cookie.rs  credentials.rs  date.rs  encoding.rs  etag.rs  expires.rs  host.rs  http_date.rs  if_modified_since.rs  if_none_match.rs  last_modified.rs  location.rs  mod.rs  origin.rs  (+13 more)
src/internals/: mod.rs  vec_map.rs
src/shared/: charset.rs  entity.rs  mod.rs
