[package]
name = "typed-headers"
version = "0.1.0"
authors = ["Steven Fackler <sfackler@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Typed HTTP header serialization and deserialization."
repository = "https://github.com/sfackler/typed-headers"
readme = "README.md"

[dependencies]
base64 = "0.9"
bytes = "0.4"
chrono = "0.4"
http = "0.1"
mime = "0.3"
language-tags = "0.2"
unicase = "2"
percent-encoding = "1"
