[package]
name = "typed-headers"
version = "0.2.0"
authors = ["Steven Fackler <sfackler@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Typed HTTP header serialization and deserialization."
repository = "https://github.com/sfackler/typed-headers"
readme = "README.md"
edition = "2018"

[dependencies]
base64 = "0.11"
bytes = "0.5.2"
chrono = "0.4"
http = "0.2"
mime = "0.3"
